--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 
 body {
   font-family: "Raleway", sans-serif;
   max-width: 1280px;
+  background-color: #d6dded2e;
 }
 
 .pi_bg {
@@ -133,4 +135,9 @@ nav button:hover {
   text-align: center;
   color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
+}
+
+.review_section {
+  margin: 116px 150px;
+
 }
