focus better section done

--- a/style.css
+++ b/style.css
@@ -126,11 +126,13 @@ nav button:hover {
 .users {
   font-family: "Inter", sans-serif;
 }
+
 .users h1 {
   font-size: 80px;
   font-weight: bold;
   color: #4E47FF;
 }
+
 .users p {
   text-align: center;
   color: rgba(0, 0, 0, 0.5);
@@ -140,4 +142,23 @@ nav button:hover {
 .review_section {
   margin: 116px 150px;
 
+}
+
+.focus-section {
+  border-radius: 10px;
+  margin: 116px 150px;
+  background-color: white;
+  padding: 70px 150px;
+}
+
+.focus-section button{
+   border: none;
+  background-color: #4E47FF;
+  color: white;
+  border-radius: 10px;
+  padding: 12px 36px;   
+}
+.focus-section button:hover{ 
+   background-color: #3b35cc;
+  box-shadow: 0 8px 16px rgba(78, 71, 255, 0.3);
 }
